--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,12 @@
   </properties>
 
   <dependencies>
-  <dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<version>1.4.192</version>
-	</dependency>
+  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.41</version>
+</dependency>
 
 
 	<dependency>
