--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<junit.version>4.8.2</junit.version>
 	<mockito.version>1.9.0</mockito.version>
 	<slf4j.version>1.5.11</slf4j.version>
+	<org.springframework-version>4.1.7.RELEASE</org.springframework-version>
   </properties>
 
   <dependencies>
@@ -28,23 +29,24 @@
     <version>5.1.41</version>
 </dependency>
 
-
+<!--  
 	<dependency>
 		<groupId>org.eclipse.persistence</groupId>
 		<artifactId>org.eclipse.persistence.jpa</artifactId>
 		<version>2.6.1</version>
 	</dependency>
-
+--> 
 <!-- Tarvitaan, jos JPA:ta käytetään Java EE -kontainerin ulkopuolella -->
 <!-- JPA 2.1 toteutus -->
-
+<!--  
 	<dependency>
 		<groupId>org.eclipse.persistence</groupId>
 		<artifactId>javax.persistence</artifactId>
 		<version>2.1.0</version>
 	</dependency>
-
+-->
   
+  <!-- Glassfishommia -->
 		<dependency>
 		<groupId>org.glassfish.jersey.core</groupId>
 		<artifactId>jersey-server</artifactId>
@@ -75,12 +77,7 @@
 		<artifactId>slf4j-simple</artifactId>
 		<version>${slf4j.version}</version>
 	</dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
+
     <dependency>
 		<groupId>taglibs</groupId>
 		<artifactId>standard</artifactId>
@@ -97,6 +94,68 @@
 		<version>7.0</version>
 		<scope>provided</scope>
 	</dependency>
+	
+	<!-- Spring framework -->
+	
+	<!--  Spring perus -->
+	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+	</dependency>
+	
+	<!-- Spring-beans -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+
+<!-- Servlet Java konfiguraatio Springissä vaatii vähintään version Servlet API 3! -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
+		<!-- Test -->		
+		<dependency>
+      		<groupId>junit</groupId>
+      		<artifactId>junit</artifactId>
+      		<version>4.12</version>
+      		<scope>test</scope>
+    	</dependency>
+	
+	
   </dependencies>
   
   <build>
@@ -109,7 +168,11 @@
 			<directory>src/main/webapp</directory>
 		</resource>
 	</resources>
+	
+	<!-- Plugins -->
 	<plugins>
+	
+
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
@@ -119,11 +182,14 @@
 				<target>${jdk.version}</target>
 			</configuration>
 		</plugin>
+
+		 
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-war-plugin</artifactId>
 			<version>2.6</version>
 		</plugin>
+		
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-jar-plugin</artifactId>
