--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>fi.agileo.javaee.jaxrs.RuokailuApp</param-value>
+			<param-value>fi.turbotiimi.paivyri.jaxrs.RuokailuApp</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
